--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ title: Tarik Blog
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
  New Description
+ sadfsfasda
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://tarikuzunkaya07.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
